dsdo_kubenet/manifests/ldap/ldap-ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap-ui
  name: ldap-ui
  namespace: ldap
spec:
  ports:
    - port: 80
  selector:
    app: ldap-ui
